Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41085

Wayland: cannot drag a window by its titlebar using touch

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.3.1
    • QPA: Wayland
    • None
    • Linux, weston

      When running weston, you can drag any weston window by its titlebar via either the touchscreen or the mouse. With Qt (self-decorated windows), you can drag it only with the mouse.

        For Gerrit Dashboard: QTBUG-41085
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes